--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 /* Общие стили */
+* {
+  box-sizing: border-box;
+  padding: 10px;
+  
+}
+
 .app-container {
   font-family: 'Arial', sans-serif;
   padding: 20px;
@@ -11,6 +17,8 @@
 h1 {
   text-align: center;
   margin-bottom: 20px;
+  background-color: rgba(0, 0, 0, 0.10);
+  border-radius: 20px;
 }
 
 h2, h3 {
