--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 /* Общие стили */
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +15,7 @@ body {
 }
 
 .app-container {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   padding: 30px;
   max-width: 800px;
   margin: 40px auto;
@@ -25,9 +27,10 @@ body {
 
 h1 {
   text-align: center;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 2.5rem;
   margin-bottom: 30px;
-  background-color: #4CAF50;
+  background-color: rgba(0, 0, 255, 0.6);
   color: white;
   padding: 20px;
   border-radius: 8px;
@@ -36,6 +39,7 @@ h1 {
 
 h2, h3 {
   font-weight: 600;
+  font-family: "Space Grotesk", sans-serif;
   margin-left: 10px;
   color: #333;
 }
@@ -48,6 +52,7 @@ h2, h3 {
 
 li {
   font-size: 18px;
+  font-family: "Space Grotesk", sans-serif;
   
 }
 
@@ -70,6 +75,7 @@ label {
   margin-top: 5px;
   margin-left: 10px;
   display: block;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 input[type="date"],
@@ -103,6 +109,7 @@ button {
   transition: background-color 0.3s ease;
   width: 100%;
   box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 button:hover {
@@ -210,17 +217,21 @@ button:hover {
   background-color: #f9f9f9;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .result h2 {
   margin: 10px 0;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .result h3 {
   font-weight: 600;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .result strong {
+  font-family: "Space Grotesk", sans-serif;
   font-size: 1.3rem;
 }
 
@@ -234,6 +245,7 @@ button:hover {
 
 .totals p {
   font-size: 1.5rem;
+  font-family: "Space Grotesk", sans-serif;
   font-weight: 600;
   color: #4CAF50;
   border: 2px solid #4CAF50;
@@ -271,6 +283,7 @@ button:hover {
 
 .notification {
   padding: 10px 20px;
+  font-family: "Space Grotesk", sans-serif;
   margin: 10px auto;
   border-radius: 8px;
   width: fit-content;
