--- a/src/App.css
+++ b/src/App.css
@@ -247,8 +247,8 @@ button:hover {
   font-size: 1.5rem;
   font-family: "Space Grotesk", sans-serif;
   font-weight: 600;
-  color: #4CAF50;
-  border: 2px solid #4CAF50;
+  color: #000000;
+  border: 2px solid #4a4a4a62;
   padding: 10px;
   border-radius: 6px;
   margin-top: 10px;
