--- a/src/App.css
+++ b/src/App.css
@@ -261,6 +261,7 @@ button:hover {
   padding: 12px 18px;
   width: 50%;
   margin: 20px auto 0;
+  margin-bottom: 10px;
   display: block;
   text-align: center;
   border-radius: 8px;
