--- a/src/App.css
+++ b/src/App.css
@@ -200,49 +200,21 @@ button:hover {
   background-color: #e53935;
 }
 
-
-
-
-
-.overtime-hours {
-  color: #ff5722;
-  font-weight: bold;
-}
-
-/* Стили для итогов */
-.result {
-  border-top: 2px solid #ddd;
-  padding-top: 30px;
-  margin-top: 40px;
-  background-color: #f9f9f9;
-  border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-  font-family: "Space Grotesk", sans-serif;
-}
-
-.result h2 {
-  margin: 10px 0;
-  font-family: "Space Grotesk", sans-serif;
-}
-
-.result h3 {
-  font-weight: 600;
-  font-family: "Space Grotesk", sans-serif;
-}
-
-.result strong {
-  font-family: "Space Grotesk", sans-serif;
-  font-size: 1.3rem;
-}
-
 /* Стили для итогов */
 .totals {
+  width: 50%;
   background-color: rgba(0, 0, 0, 0.04);
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.totals h2 {
+  margin-top: 10px;
+  color: #000ed2;
+}
+
+/* Стили для абзацев */
 .totals p {
   font-size: 1.5rem;
   font-family: "Space Grotesk", sans-serif;
@@ -252,8 +224,18 @@ button:hover {
   padding: 10px;
   border-radius: 6px;
   margin-top: 10px;
-  text-align: center;
+  text-align: left;
+  display: flex;
+  justify-content: space-between; /* Для выравнивания текста и значений */
+  align-items: center;
 }
+
+/* Стили для значений (span) */
+.totals span {
+  text-align: right;
+  display: inline-block; /* Чтобы применился text-align */
+}
+
 
 /* Стили для кнопки PDF */
 .pdf-button {
@@ -334,4 +316,10 @@ button:hover {
 @keyframes fadeout {
   from { opacity: 1; }
   to { opacity: 0; }
+}
+
+@media (max-width: 768px) {
+  .totals {
+    width: 100%;
+  }
 }
